feat: add middleware with jwt
